--- a/configs/branch-scanner/launchpad.conf
+++ b/configs/branch-scanner/launchpad.conf
@@ -19,6 +19,15 @@ site-definition site.zcml
 # interruptions (SIGINTR, thread switches):
 interrupt-check-interval 200
 
+<zodb>
+</zodb>
+
+<accesslog>
+</accesslog>
+
+<eventlog>
+</eventlog>
+
 # Launchpad configuration. Note that we can specify multiple configurations
 # in here. Currently, we have configurations named 'testrunner' (used
 # by the testrunner), and 'default' (used by everything else)
@@ -40,11 +49,62 @@ interrupt-check-interval 200
             oops_prefix BSCAN
             copy_to_zlog false
         </launchpad_errorreports>
+
+        <launchpad_session>
+        </launchpad_session>
+
+        <virtual_hosts>
+            use_https yes
+            <mainsite>
+                hostname launchpad.net
+            </mainsite>
+            <blueprints>
+                hostname blueprints.launchpad.net
+            </blueprints>
+            <code>
+                hostname code.launchpad.net
+            </code>
+            <translations>
+                hostname translations.launchpad.net
+            </translations>
+            <bugs>
+                hostname bugs.launchpad.net
+            </bugs>
+            <answers>
+                hostname answers.launchpad.net
+            </answers>
+            <shipitubuntu>
+                hostname shipit.ubuntu.com
+            </shipitubuntu>
+            <shipitkubuntu>
+                hostname shipit.kubuntu.org
+            </shipitkubuntu>
+            <shipitedubuntu>
+                hostname shipit.edubuntu.org
+            </shipitedubuntu>
+            <xmlrpc>
+                hostname xmlrpc.launchpad.net
+            </xmlrpc>
+        </virtual_hosts>
     </launchpad>
 
     <branchscanner>
         dbuser branchscanner
     </branchscanner>
+
+    <librarian>
+        # Librarian configuration information for both client and server
+        upload_host macaroni.ubuntu.com
+        upload_port 9090
+        download_host macaroni.ubuntu.com
+        download_port 8000
+    </librarian>
+
+    <shipit>
+        # XXX: Even though this is empty, it must be kept so that the default
+        # values are used. See https://launchpad.net/bugs/50033 for details.
+        # Guilherme Salgado, 2006-06-16
+    </shipit>
 
     <zopeless>
         # Configuration specific for code that is running in the Zopeless
@@ -54,3 +114,14 @@ interrupt-check-interval 200
         smtp_host localhost
         smtp_port 25
     </zopeless>
+
+    <gpghandler>
+        host keyserver.ubuntu.com
+        port 11371
+    </gpghandler>
+
+    <supermirror>
+        warehouse_root_url http://bazaar.launchpad.net/+branches/
+    </supermirror>
+
+</canonical>
