fix bug #81187 (remove cronscripts/auto-giveback.py) and small fixes in dogfood config (do not keep the build uploads) and ftpmaster config (use the dedicated keyserver).

--- a/configs/dogfood/launchpad.conf
+++ b/configs/dogfood/launchpad.conf
@@ -302,7 +302,7 @@ interrupt-check-interval 200
     <builddmaster>
         dbuser fiera
         # Here, we really do want to invoke the uploader.
-        uploader scripts/process-upload.py -KMvv --context buildd
+        uploader scripts/process-upload.py -Mvv --context buildd
         root /srv/launchpad.net/builddmaster/
         socket_timeout 600
         send_build_notification no
