--- a/configs/ftpmaster/launchpad.conf
+++ b/configs/ftpmaster/launchpad.conf
@@ -131,7 +131,9 @@ interrupt-check-interval 200
     </zopeless>
 
     <gpghandler>
-        host keyserver.ubuntu.com 
+        # let's use the dedicated keyserver.
+        # host keyserver.ubuntu.com
+        host keyserver.internal
         port 11371
     </gpghandler>
 
