change the oops_prefix to SMS

--- a/configs/branch-scanner/launchpad.conf
+++ b/configs/branch-scanner/launchpad.conf
@@ -46,7 +46,7 @@ interrupt-check-interval 200
         soft_request_timeout 10000
         <launchpad_errorreports>
             errordir /srv/bzrsyncd.ubuntu.com/production-logs
-            oops_prefix BSCAN
+            oops_prefix SMS
             copy_to_zlog false
         </launchpad_errorreports>
 
