--- a/configs/beta/launchpad.conf
+++ b/configs/beta/launchpad.conf
@@ -5,6 +5,9 @@ site-definition site.zcml
 # interruptions (SIGINTR, thread switches):
 interrupt-check-interval 200
 
+# number of appserver threads to run
+threads 16
+
 <server>
   type HTTP
   address 11030
