--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -77,6 +77,7 @@ public.karmatotalcache                  = SELECT
 public.launchpadstatistic               = SELECT
 public.logintoken                       = SELECT, INSERT, UPDATE, DELETE
 public.messagechunk                     = SELECT, INSERT
+public.mentoringoffer                   = SELECT, INSERT, UPDATE, DELETE
 public.mirrorcdimagedistrorelease       = SELECT, INSERT, DELETE
 public.mirrordistroarchrelease          = SELECT, INSERT, DELETE, UPDATE
 public.mirrorproberecord                = SELECT, INSERT, DELETE
