Fixes bug 81269 (Launchpad needs to switch to internal keyserver)

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -287,9 +287,9 @@ interrupt-check-interval 200
     </zopeless>
 
     <gpghandler>
-        # host and port points to a reliable keyserver (aka ours
-        # public one)
-        host keyserver.ubuntu.com
+        # host and port points to a reliable keyserver (aka our
+        # internal one)
+        host keyserver.internal
         port 11371
     </gpghandler>
 
