--- a/configs/dogfood/launchpad.conf
+++ b/configs/dogfood/launchpad.conf
@@ -151,7 +151,7 @@ interrupt-check-interval 200
     </zopeless>
 
     <gpghandler>
-        host keyserver.ubuntu.com
+        host keyserver.internal
         port 11371
     </gpghandler>
 
