--- a/configs/demo/launchpad.conf
+++ b/configs/demo/launchpad.conf
@@ -180,7 +180,7 @@ threads 16
         smtp_port 25
     </zopeless>
     <gpghandler>
-        host keyserver.ubuntu.com
+        host keyserver.internal
         port 11371
     </gpghandler>
     <zeca>
