--- a/configs/production/launchpad.conf
+++ b/configs/production/launchpad.conf
@@ -159,7 +159,7 @@ interrupt-check-interval 200
         smtp_port 25
     </zopeless>
     <gpghandler>
-        host keyserver.ubuntu.com
+        host keyserver.internal
         port 11371
     </gpghandler>
     <zeca>
