--- a/configs/staging/launchpad.conf
+++ b/configs/staging/launchpad.conf
@@ -153,7 +153,7 @@ interrupt-check-interval 200
     </zopeless>
 
     <gpghandler>
-        host keyserver.ubuntu.com 
+        host keyserver.internal 
         port 11371
     </gpghandler>
 
