Improved the way we handle errors on export time so we don't break on unexpected errors

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -231,6 +231,8 @@ public.validpersonorteamcache           = SELECT
 [poexport]
 # Rosetta export script
 type=user
+public.distribution                     = SELECT
+public.distrorelease                    = SELECT
 public.emailaddress                     = SELECT
 public.language                         = SELECT
 public.libraryfilealias                 = SELECT, INSERT
@@ -248,6 +250,9 @@ public.poselection                      = SELECT
 public.posubmission                     = SELECT
 public.potemplate                       = SELECT
 public.potemplatename                   = SELECT
+public.product                          = SELECT
+public.productseries                    = SELECT
+public.sourcepackagename                = SELECT
 public.translationgroup                 = SELECT
 public.translator                       = SELECT
 public.validpersonorteamcache           = SELECT
