Add rosettaadmin.email to all config files.

--- a/configs/ftpmaster/launchpad.conf
+++ b/configs/ftpmaster/launchpad.conf
@@ -118,6 +118,9 @@ interrupt-check-interval 200
         <poimport>
             dbuser poimport
         </poimport>
+	<rosettaadmin>
+	    email  rosetta@launchpad.net
+	</rosettaadmin>
     </rosetta>
 
     <cveupdater>
