--- a/configs/gina/launchpad.conf
+++ b/configs/gina/launchpad.conf
@@ -215,6 +215,13 @@ interrupt-check-interval 200
         # Guilherme Salgado, 2006-06-16
     </shipit>
 
+    <rosetta>
+        <rosettaadmin>
+	    email  rosetta@launchpad.net
+	</rosettaadmin>
+
+    </rosetta>
+
     <zopeless>
         # Configuration specific for code that is running in the Zopeless
         # environment. Hopefully this section will disappear when the
