--- a/configs/jubany/launchpad.conf
+++ b/configs/jubany/launchpad.conf
@@ -188,6 +188,7 @@ interrupt-check-interval 200
     <rosetta>
         <rosettaadmin>
             dbuser rosettaadmin
+	    email  rosetta@launchpad.net
         </rosettaadmin>
     </rosetta>
 </canonical>
