--- a/configs/production1/launchpad.conf
+++ b/configs/production1/launchpad.conf
@@ -157,6 +157,7 @@ interrupt-check-interval 200
         </poimport>
         <rosettaadmin>
             dbuser rosettaadmin
+	    email  rosetta@launchpad.net
         </rosettaadmin>
     </rosetta>
 
