--- a/configs/demo/launchpad.conf
+++ b/configs/demo/launchpad.conf
@@ -168,6 +168,7 @@ threads 16
         </poimport>
         <rosettaadmin>
             dbuser rosettaadmin
+	    email  rosetta@launchpad.net
         </rosettaadmin>
     </rosetta>
 
