--- a/configs/edge/launchpad.conf
+++ b/configs/edge/launchpad.conf
@@ -131,6 +131,7 @@ interrupt-check-interval 200
         </poimport>
         <rosettaadmin>
             dbuser rosettaadmin
+	    email  rosetta@launchpad.net
         </rosettaadmin>
     </rosetta>
 
