--- a/configs/production/launchpad.conf
+++ b/configs/production/launchpad.conf
@@ -150,6 +150,12 @@ interrupt-check-interval 200
         switch_to_edgy false
     </shipit>
 
+    <rosetta>
+        <rosettaadmin>
+            email rosetta@launchpad.net
+        </rosettaadmin>
+    </rosetta>
+
     <zopeless>
         # Configuration specific for code that is running in the Zopeless
         # environment. Hopefully this section will disappear when the
