--- a/configs/production4/launchpad.conf
+++ b/configs/production4/launchpad.conf
@@ -153,6 +153,12 @@ interrupt-check-interval 200
         switch_to_edgy true
     </shipit>
 
+    <rosetta>
+        <rosettaadmin>
+	    email  rosetta@launchpad.net
+        </rosettaadmin>
+    </rosetta>
+
     <zopeless>
         # Configuration specific for code that is running in the Zopeless
         # environment. Hopefully this section will disappear when the
