--- a/configs/production/launchpad.conf
+++ b/configs/production/launchpad.conf
@@ -117,6 +117,10 @@ interrupt-check-interval 200
 
     <branchscanner>
         dbuser branchscanner
+        <script_errorreports>
+            errordir /srv/bzrsyncd.ubuntu.com/production-logs
+            oops_prefix SMS
+        </script_errorreports>
     </branchscanner>
 
     <authserver>
