override copy_to_zlog as well

--- a/configs/production/launchpad.conf
+++ b/configs/production/launchpad.conf
@@ -120,6 +120,7 @@ interrupt-check-interval 200
         <script_errorreports>
             errordir /srv/bzrsyncd.ubuntu.com/production-logs
             oops_prefix SMS
+            copy_to_zlog false
         </script_errorreports>
     </branchscanner>
 
