Change KarmaCache to store other levels of caches so that we don't need to issue SUM queries on it.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -335,6 +335,7 @@ public.karmaaction                              = SELECT
 public.karmatotalcache                          = SELECT, INSERT, UPDATE, DELETE
 public.emailaddress                             = SELECT
 public.person                                   = SELECT
+public.product                                  = SELECT
 public.validpersonorteamcache                   = SELECT
 
 [cve]
