Permissions required for poexport to not blow up - more poexport tests needed!

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -250,6 +250,8 @@ public.poselection                      = SELECT
 public.posubmission                     = SELECT
 public.potemplate                       = SELECT
 public.potemplatename                   = SELECT
+public.product                          = SELECT
+public.productseries                    = SELECT
 public.sourcepackagename                = SELECT
 public.translationgroup                 = SELECT
 public.translator                       = SELECT
