--- a/configs/ftpmaster/launchpad.conf
+++ b/configs/ftpmaster/launchpad.conf
@@ -119,6 +119,9 @@ interrupt-check-interval 200
             dbuser poimport
         </poimport>
        <rosettaadmin>
+        # XXX: Even though this is empty, it must be kept so that the default
+    	# values are used. See https://launchpad.net/bugs/50033 for details.
+    	# Danilo Segan, 2007-02-07
        </rosettaadmin>
     </rosetta>
 
