--- a/configs/production3/launchpad.conf
+++ b/configs/production3/launchpad.conf
@@ -154,6 +154,9 @@ interrupt-check-interval 200
     </shipit>
 
     <rosetta>
+        # XXX: Even though this is empty, it must be kept so that the default
+    	# values are used. See https://launchpad.net/bugs/50033 for details.
+    	# Danilo Segan, 2007-02-07
         <rosettaadmin>
         </rosettaadmin>
     </rosetta>
