--- a/configs/production/launchpad.conf
+++ b/configs/production/launchpad.conf
@@ -282,11 +282,21 @@ interrupt-check-interval 200
         branchlistsource http://gangotri.ubuntu.com:9000/supermirror-pull-list.txt
         authserver_url http://macquarie.warthogs.hbd.com:8999/branch/
         warehouse_root_url http://bazaar.launchpad.net/+branches/
-        <script_errorreports>
-            errordir /srv/sm-ng/production-logs
-            oops_prefix SMP
+        <mirror_errorreports>
+            errordir /srv/sm-ng/production-logs/mirror-branch-puller
+            oops_prefix SMPM
             copy_to_zlog false
-        </script_errorreports>
+        </mirror_errorreports>
+        <upload_errorreports>
+            errordir /srv/sm-ng/production-logs/upload-branch-puller
+            oops_prefix SMPU
+            copy_to_zlog false
+        </upload_errorreports>
+        <import_errorreports>
+            errordir /srv/sm-ng/production-logs/import-branch-puller
+            oops_prefix SMPI
+            copy_to_zlog false
+        </import_errorreports>
     </supermirror>
     <supermirrorsftp>
         authserver http://macquarie.warthogs.hbd.com:8999/v2/
