Catch more references to revisionnumber and rename to branchrevision

--- a/database/schema/diagram.cfg
+++ b/database/schema/diagram.cfg
@@ -71,7 +71,7 @@ tables=build, distroreleasequeuebuild, buildqueue, builder, processor, distrorel
 tables=mirror+, mirrorcontent, mirrorsourcecontent, person-, component+, pushmirroraccess, mirrordistroarchrelease, mirrordistroreleasesource, mirrorproberecord, continent, distributionmirror, mirrorcdimagedistrorelease
 
 [buttress]
-tables=sourcesource, archconfigentry, branchlabel, archarchive, archuserid, changeset, manifestentry, manifest, archnamespace, archarchivelocationsigner, branchrelationship, archarchivelocation, changesetfilename, archconfig, changesetfile, branch, changesetfilehash, developmentmanifest, manifestancestry, revisionparent, revisionauthor, revision, revisionnumber, branchmessage
+tables=sourcesource, archconfigentry, branchlabel, archarchive, archuserid, changeset, manifestentry, manifest, archnamespace, archarchivelocationsigner, branchrelationship, archarchivelocation, changesetfilename, archconfig, changesetfile, branch, changesetfilehash, developmentmanifest, manifestancestry, revisionparent, revisionauthor, revision, branchrevision, branchmessage
 
 [bounty]
 tables=bounty++, bountysubscription, bountymessage,
