--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -70,7 +70,7 @@ public.distroreleasepackagecache        = SELECT
 public.distributionsourcepackagecache   = SELECT
 public.emailaddress                     = SELECT, INSERT, UPDATE, DELETE
 public.karmacache                       = SELECT
-public.karmapersoncategorycacheview     = SELECT
+#public.karmapersoncategorycacheview     = SELECT
 public.karmacategory                    = SELECT
 public.karmatotalcache                  = SELECT
 public.launchpadstatistic               = SELECT
