--- a/configs/production/launchpad.conf
+++ b/configs/production/launchpad.conf
@@ -118,7 +118,7 @@ interrupt-check-interval 200
     <branchscanner>
         dbuser branchscanner
         <script_errorreports>
-            errordir /srv/bzrsyncd.ubuntu.com/production-logs
+            errordir /srv/bzrsyncd.ubuntu.com/production-logs/branch-scanner
             oops_prefix SMS
             copy_to_zlog false
         </script_errorreports>
