Database updates from bzr+ssh://devpad.canonical.com/code/mark/launchpad/onramp

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -74,6 +74,7 @@ public.karmacategory                    = SELECT
 public.karmatotalcache                  = SELECT
 public.launchpadstatistic               = SELECT
 public.logintoken                       = SELECT, INSERT, UPDATE, DELETE
+public.mentoringoffer                   = SELECT, INSERT, UPDATE, DELETE
 public.messagechunk                     = SELECT, INSERT
 public.mirrorcdimagedistrorelease       = SELECT, INSERT, DELETE
 public.mirrordistroarchrelease          = SELECT, INSERT, DELETE, UPDATE
