scanner sends email

--- a/configs/dogfood/launchpad.conf
+++ b/configs/dogfood/launchpad.conf
@@ -326,7 +326,7 @@ interrupt-check-interval 200
     </supermirror>
 
     <branchscanner>
-        dbuser importd
+        dbuser branchscanner
     </branchscanner>
 
     <supermirrorsftp>
