--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -274,6 +274,7 @@ public.revisionauthor                   = SELECT, INSERT
 type=user
 groups=write
 public.branch                           = SELECT, INSERT, UPDATE
+public.branchsubscription               = SELECT
 public.revision                         = SELECT, INSERT
 public.revisionnumber                   = SELECT, INSERT, UPDATE, DELETE
 public.revisionparent                   = SELECT, INSERT
