--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -391,7 +391,7 @@ interrupt-check-interval 200
     </supermirror>
 
     <branchscanner>
-        dbuser importd
+        dbuser branchscanner
     </branchscanner>
 
     <supermirrorsftp>
@@ -653,7 +653,7 @@ interrupt-check-interval 200
     </supermirror>
 
     <branchscanner>
-        dbuser importd
+        dbuser branchscanner
         <script_errorreports>
             errordir /var/tmp/lperr.test
             oops_prefix TSMS
