Revert references to new BranchRevision table and add a RevisionNumber alias to the new table so existing code continues to run

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -134,6 +134,7 @@ public.branchmessage                    = SELECT, INSERT
 # context. -- Gustavo Niemeyer, 2005-11-02
 public.revision                         = SELECT, UPDATE
 public.branchrevision                   = SELECT
+public.revisionnumber                   = SELECT
 public.revisionparent                   = SELECT
 public.revisionauthor                   = SELECT
 public.personalpackagearchive           = SELECT, UPDATE
@@ -268,6 +269,7 @@ groups=write
 public.branch                           = SELECT, INSERT, UPDATE
 public.revision                         = SELECT, INSERT
 public.branchrevision                   = SELECT, INSERT, UPDATE, DELETE
+public.revisionnumber                   = SELECT, INSERT, UPDATE, DELETE
 public.revisionparent                   = SELECT, INSERT
 public.revisionauthor                   = SELECT, INSERT
 
@@ -277,6 +279,7 @@ groups=write
 public.branch                           = SELECT, INSERT, UPDATE
 public.revision                         = SELECT, INSERT
 public.branchrevision                   = SELECT, INSERT, UPDATE, DELETE
+public.revisionnumber                   = SELECT, INSERT, UPDATE, DELETE
 public.revisionparent                   = SELECT, INSERT
 public.revisionauthor                   = SELECT, INSERT
 
