Database bits from danilo/launchpad/firefox-import

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -241,16 +241,17 @@ public.libraryfilecontent               = SELECT, INSERT
 public.person                           = SELECT
 public.poexport                         = SELECT
 public.poexportrequest                  = SELECT, DELETE
-public.pomsgid                          = SELECT
-public.potexport                        = SELECT
 public.pofile                           = SELECT, UPDATE
-public.pomsgset                         = SELECT
+public.pomsgid                          = SELECT
 public.pomsgidsighting                  = SELECT
-public.potmsgset                        = SELECT
+public.pomsgset                         = SELECT
 public.poselection                      = SELECT
 public.posubmission                     = SELECT
 public.potemplate                       = SELECT
 public.potemplatename                   = SELECT
+public.potexport                        = SELECT
+public.potmsgset                        = SELECT
+public.potranslation                    = SELECT
 public.product                          = SELECT
 public.productseries                    = SELECT
 public.sourcepackagename                = SELECT
