openid virtual host and root document

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -163,6 +163,9 @@ interrupt-check-interval 200
             <answers>
                 hostname answers.launchpad.dev
             </answers>
+            <openid>
+                hostname openid.launchpad.dev
+            </openid>
             <shipitubuntu>
                 hostname shipit.ubuntu.dev
             </shipitubuntu>
@@ -454,6 +457,9 @@ interrupt-check-interval 200
             <answers>
                 hostname answers.launchpad.dev
             </answers>
+            <openid>
+                hostname openid.launchpad.dev
+            </openid>
             <shipitubuntu>
                 hostname shipit.ubuntu.dev
             </shipitubuntu>
