--- a/configs/beta/launchpad.conf
+++ b/configs/beta/launchpad.conf
@@ -66,6 +66,9 @@ threads 16
             <answers>
                 hostname answers.beta.launchpad.net
             </answers>
+            <openid>
+                hostname openid.beta.launchpad.net
+            </openid>
             <shipitubuntu>
                 hostname ubuntu.shipit.beta.lauchpad.net
             </shipitubuntu>
