--- a/configs/edge/launchpad.conf
+++ b/configs/edge/launchpad.conf
@@ -60,6 +60,9 @@ interrupt-check-interval 200
             <answers>
                 hostname answers.edge.launchpad.net
             </answers>
+            <openid>
+                hostname openid.edge.launchpad.net
+            </openid>
             <shipitubuntu>
                 hostname ubuntu.shipit.edge.launchpad.net
                 althostnames shipit.edge.launchpad.net
