--- a/configs/production1/launchpad.conf
+++ b/configs/production1/launchpad.conf
@@ -100,6 +100,9 @@ interrupt-check-interval 200
             <answers>
                 hostname answers.launchpad.net
             </answers>
+            <openid>
+                hostname openid.launchpad.net
+            </openid>
             <shipitubuntu>
                 hostname shipit.ubuntu.com
             </shipitubuntu>
