Add actual hostnames to production configs so wget to individual instances works

--- a/configs/beta/launchpad.conf
+++ b/configs/beta/launchpad.conf
@@ -49,7 +49,7 @@ threads 16
             use_https yes
             <mainsite>
                 hostname beta.launchpad.net
-                althostnames localhost
+                althostnames localhost, asuka.ubuntu.com
             </mainsite>
             <blueprints>
                 hostname blueprints.beta.launchpad.net
