--- a/configs/edge/launchpad.conf
+++ b/configs/edge/launchpad.conf
@@ -43,7 +43,7 @@ interrupt-check-interval 200
             use_https yes
             <mainsite>
                 hostname edge.launchpad.net
-                althostnames localhost
+                althostnames localhost, asuka.ubuntu.com
             </mainsite>
             <blueprints>
                 hostname blueprints.edge.launchpad.net
