--- a/configs/production3/launchpad.conf
+++ b/configs/production3/launchpad.conf
@@ -83,7 +83,7 @@ interrupt-check-interval 200
             use_https yes
             <mainsite>
                 hostname launchpad.net
-                althostnames localhost, www.launchpad.net
+                althostnames localhost, www.launchpad.net, gandwana.ubuntu.com
             </mainsite>
             <blueprints>
                 hostname blueprints.launchpad.net
