--- a/configs/production2/launchpad.conf
+++ b/configs/production2/launchpad.conf
@@ -82,7 +82,7 @@ interrupt-check-interval 200
             use_https yes
             <mainsite>
                 hostname launchpad.net
-                althostnames localhost, www.launchpad.net
+                althostnames localhost, www.launchpad.net, gangotri.ubuntu.com
             </mainsite>
             <blueprints>
                 hostname blueprints.launchpad.net
