Rename config section.

--- a/configs/beta/launchpad.conf
+++ b/configs/beta/launchpad.conf
@@ -166,9 +166,9 @@ threads 16
         dbuser statistician
     </statistician>
 
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
-    </tickettracker>
+    </answertracker>
 
     <uploadqueue>
         dbuser queued
