--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -271,11 +271,11 @@ interrupt-check-interval 200
         dbuser cve
     </cveupdater>
 
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
         # The email domain, to which incoming mail should be sent.
         email_domain support.launchpad.net
-    </tickettracker>
+    </answertracker>
 
     <zopeless>
         # Configuration specific for code that is running in the Zopeless
@@ -612,10 +612,10 @@ interrupt-check-interval 200
         dbuser cve
     </cveupdater>
 
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
         email_domain support.launchpad.net
-    </tickettracker>
+    </answertracker>
 
     <buildsequencer>
         mailproblemsto -
