--- a/configs/demo/launchpad.conf
+++ b/configs/demo/launchpad.conf
@@ -222,9 +222,9 @@ threads 16
             mindelay 10
         </buildsequencer_job>
     </buildsequencer>
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
-    </tickettracker>
+    </answertracker>
     <supermirror>
         dbuser supermirror
         branchesdest /srv/sm-ng/mirrors
