--- a/configs/edge/launchpad.conf
+++ b/configs/edge/launchpad.conf
@@ -286,9 +286,9 @@ interrupt-check-interval 200
         dbuser statistician
     </statistician>
 
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
-    </tickettracker>
+    </answertracker>
 
     <uploadqueue>
         dbuser queued
