--- a/configs/ftpmaster/launchpad.conf
+++ b/configs/ftpmaster/launchpad.conf
@@ -278,9 +278,9 @@ interrupt-check-interval 200
         dbuser statistician
     </statistician>
 
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
-    </tickettracker>
+    </answertracker>
 
     <uploadqueue>
         dbuser queued
