--- a/configs/production2/launchpad.conf
+++ b/configs/production2/launchpad.conf
@@ -189,9 +189,9 @@ interrupt-check-interval 200
             mindelay 10
         </buildsequencer_job>
     </buildsequencer>
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
-    </tickettracker>
+    </answertracker>
 </canonical>
 
 # This is the config used by the test runner.
