--- a/configs/jubany/launchpad.conf
+++ b/configs/jubany/launchpad.conf
@@ -182,9 +182,9 @@ interrupt-check-interval 200
             mindelay 10
         </buildsequencer_job>
     </buildsequencer>
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
-    </tickettracker>
+    </answertracker>
     <rosetta>
         <rosettaadmin>
             dbuser rosettaadmin
