--- a/configs/production/launchpad.conf
+++ b/configs/production/launchpad.conf
@@ -281,9 +281,9 @@ interrupt-check-interval 200
             #architectures i386,powerpc,amd64,ia64,sparc,hppa
         </gina_target>
     </gina>
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
-    </tickettracker>
+    </answertracker>
     <supermirror>
         branchesdest /srv/sm-ng/mirrors
         masterlock /srv/sm-ng/data/masterlock
