--- a/configs/production1/launchpad.conf
+++ b/configs/production1/launchpad.conf
@@ -211,9 +211,9 @@ interrupt-check-interval 200
             mindelay 10
         </buildsequencer_job>
     </buildsequencer>
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
-    </tickettracker>
+    </answertracker>
     <supermirror>
         dbuser supermirror
         branchesdest /srv/sm-ng/mirrors
