--- a/configs/staging/launchpad.conf
+++ b/configs/staging/launchpad.conf
@@ -288,9 +288,9 @@ interrupt-check-interval 200
         dbuser statistician
     </statistician>
 
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
-    </tickettracker>
+    </answertracker>
 
     <uploadqueue>
         dbuser queued
