Add required section stub to librarian config

--- a/configs/librarian/launchpad.conf
+++ b/configs/librarian/launchpad.conf
@@ -107,6 +107,8 @@ interrupt-check-interval 200
                 rooturl https://launchpad.net/
             </xmlrpc>
         </virtual_hosts>
+        <launchpad_session>
+        </launchpad_session>
     </launchpad>
 
     <librarian>
