Updated production and beta configs

--- a/configs/production4/launchpad.conf
+++ b/configs/production4/launchpad.conf
@@ -62,14 +62,14 @@ interrupt-check-interval 200
     noreply_from_address noreply@launchpad.net
 
     <launchpad>
-        dbuser launchpad
+        dbuser prod4
         errors_address launchpad-error-reports@lists.canonical.com
         bugs_domain bugs.launchpad.net
         db_statement_timeout 25000
         soft_request_timeout 10000
         default_batch_size 75
         <launchpad_session>
-            dbuser session
+            dbuser session_prod4
             dbhost jubany.ubuntu.com
             dbname session_prod
         </launchpad_session>
