--- a/configs/production1/launchpad.conf
+++ b/configs/production1/launchpad.conf
@@ -62,14 +62,16 @@ interrupt-check-interval 200
     noreply_from_address noreply@launchpad.net
 
     <launchpad>
-        dbuser launchpad
+        # CREATE ROLE prod1 LOGIN IN ROLE launchpad
+        dbuser prod1
         errors_address launchpad-error-reports@lists.canonical.com
         bugs_domain bugs.launchpad.net
         db_statement_timeout 25000
         soft_request_timeout 10000
         default_batch_size 75
         <launchpad_session>
-            dbuser session
+            # CREATE ROLE session_prod1 LOGIN IN ROLE session
+            dbuser session_prod1
             dbhost jubany.ubuntu.com
             dbname session_prod
         </launchpad_session>
