OOPS prefixes ending in numbers could be bad

--- a/configs/beta4/launchpad.conf
+++ b/configs/beta4/launchpad.conf
@@ -91,7 +91,7 @@ threads 4
         </launchpad_session>
         <launchpad_errorreports>
             errordir /srv/beta.launchpad.net/launchpad/logs
-            oops_prefix BETA4
+            oops_prefix BD
             copy_to_zlog false
         </launchpad_errorreports>
     </launchpad>
