--- a/configs/beta3/launchpad.conf
+++ b/configs/beta3/launchpad.conf
@@ -91,7 +91,7 @@ threads 4
         </launchpad_session>
         <launchpad_errorreports>
             errordir /srv/beta.launchpad.net/launchpad/logs
-            oops_prefix BETA3
+            oops_prefix BC
             copy_to_zlog false
         </launchpad_errorreports>
     </launchpad>
