--- a/configs/beta2/launchpad.conf
+++ b/configs/beta2/launchpad.conf
@@ -167,9 +167,9 @@ threads 4
         dbuser statistician
     </statistician>
 
-    <tickettracker>
+    <answertracker>
         dbuser tickettracker
-    </tickettracker>
+    </answertracker>
 
     <uploadqueue>
         dbuser queued
