Add BugBranchRevision and remove BugBranch.revision_hint

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -283,6 +283,7 @@ public.branchrevision                   = SELECT, INSERT, UPDATE, DELETE
 public.revisionnumber                   = SELECT, INSERT, UPDATE, DELETE
 public.revisionparent                   = SELECT, INSERT
 public.revisionauthor                   = SELECT, INSERT
+public.bugbranchrevision                = SELECT, INSERT
 
 [targetnamecacheupdater]
 type=user
