applying review comments

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -688,7 +688,7 @@ interrupt-check-interval 200
     </importd>
 
     <personalpackagearchive>
-        root /var/tmp/ppa/
+        root /var/tmp/ppa.test/
     </personalpackagearchive>
 
 </canonical>
