add SELECT permission on BugTag for bugnotification user.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -716,6 +716,7 @@ public.bugsubscription                  = SELECT, INSERT
 public.bugnomination                    = SELECT
 public.bug                              = SELECT, INSERT, UPDATE
 public.bugmessage                       = SELECT, INSERT
+public.bugtag                           = SELECT
 public.bugtask                          = SELECT, INSERT
 public.component                        = SELECT
 public.packagebugcontact                = SELECT
