--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -54,6 +54,7 @@ public.name_blacklist_match(text)       = EXECUTE
 public.binaryandsourcepackagenameview   = SELECT
 public.binarypackagepublishinghistory   = SELECT
 public.bountysubscription               = SELECT, INSERT, UPDATE, DELETE
+public.bugattachment                    = SELECT, INSERT, UPDATE, DELETE
 public.bugbranch                        = SELECT, INSERT, UPDATE, DELETE
 public.bugcve                           = SELECT, INSERT, DELETE
 public.bugnotification                  = SELECT, INSERT, UPDATE, DELETE
@@ -714,6 +715,7 @@ public.bugsubscription                  = SELECT, INSERT
 public.bugnomination                    = SELECT
 public.bug                              = SELECT, INSERT, UPDATE
 public.bugmessage                       = SELECT, INSERT
+public.bugtag                           = SELECT
 public.bugtask                          = SELECT, INSERT
 public.component                        = SELECT
 public.packagebugcontact                = SELECT
