Fixes 86966 (OpenPGP keys link in LaunchPad account not working)

--- a/configs/beta/launchpad.conf
+++ b/configs/beta/launchpad.conf
@@ -159,6 +159,7 @@ threads 16
 
     <gpghandler>
         host keyserver.internal 
+        public_host keyserver.ubuntu.com
         port 11371
     </gpghandler>
 
