--- a/configs/ftpmaster/launchpad.conf
+++ b/configs/ftpmaster/launchpad.conf
@@ -137,6 +137,7 @@ interrupt-check-interval 200
 
     <gpghandler>
         host keyserver.internal
+        public_host keyserver.ubuntu.com
         port 11371
     </gpghandler>
 
