--- a/configs/jubany/launchpad.conf
+++ b/configs/jubany/launchpad.conf
@@ -147,6 +147,7 @@ interrupt-check-interval 200
     </zopeless>
     <gpghandler>
         host keyserver.internal
+        public_host keyserver.ubuntu.com
         port 11371
     </gpghandler>
     <zeca>
