--- a/configs/beta1/launchpad.conf
+++ b/configs/beta1/launchpad.conf
@@ -160,6 +160,7 @@ threads 4
 
     <gpghandler>
         host keyserver.internal 
+        public_host keyserver.ubuntu.com
         port 11371
     </gpghandler>
 
