--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -290,6 +290,7 @@ interrupt-check-interval 200
         # host and port points to a reliable keyserver (aka our
         # internal one)
         host keyserver.internal
+        public_host keyserver.ubuntu.com
         port 11371
     </gpghandler>
 
@@ -521,6 +522,7 @@ interrupt-check-interval 200
     </zopeless>
     <gpghandler>
         host localhost
+        public_host keyserver.ubuntu.com
         port 11371
     </gpghandler>
     <zeca>
