--- a/configs/demo/launchpad.conf
+++ b/configs/demo/launchpad.conf
@@ -181,6 +181,7 @@ threads 16
     </zopeless>
     <gpghandler>
         host keyserver.internal
+        public_host keyserver.ubuntu.com
         port 11371
     </gpghandler>
     <zeca>
