--- a/configs/edge/launchpad.conf
+++ b/configs/edge/launchpad.conf
@@ -152,6 +152,7 @@ interrupt-check-interval 200
 
     <gpghandler>
         host keyserver.internal 
+        public_host keyserver.ubuntu.com
         port 11371
     </gpghandler>
 
