--- a/configs/production1/launchpad.conf
+++ b/configs/production1/launchpad.conf
@@ -172,6 +172,7 @@ interrupt-check-interval 200
     </zopeless>
     <gpghandler>
         host keyserver.internal
+        public_host keyserver.ubuntu.com
         port 11371
     </gpghandler>
     <zeca>
