--- a/configs/staging/launchpad.conf
+++ b/configs/staging/launchpad.conf
@@ -154,6 +154,7 @@ interrupt-check-interval 200
 
     <gpghandler>
         host keyserver.internal 
+        public_host keyserver.ubuntu.com
         port 11371
     </gpghandler>
 
