Rename table objects.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -111,13 +111,13 @@ public.sprintattendance                 = SELECT, INSERT, UPDATE, DELETE
 public.sprint                           = SELECT, INSERT, UPDATE
 public.sprintspecification              = SELECT, INSERT, UPDATE, DELETE
 public.standardshipitrequest            = SELECT, INSERT, UPDATE, DELETE
-public.supportcontact                   = SELECT, INSERT, UPDATE, DELETE
+public.answercontact                    = SELECT, INSERT, UPDATE, DELETE
 public.temporaryblobstorage             = SELECT, INSERT, DELETE
-public.ticketbug                        = SELECT, INSERT, DELETE
-public.ticketmessage                    = SELECT, INSERT
-public.ticketreopening                  = SELECT, INSERT, UPDATE
-public.ticket                           = SELECT, INSERT, UPDATE
-public.ticketsubscription               = SELECT, INSERT, UPDATE, DELETE
+public.questionbug                      = SELECT, INSERT, DELETE
+public.questionmessage                  = SELECT, INSERT
+public.questionreopening                = SELECT, INSERT, UPDATE
+public.question                         = SELECT, INSERT, UPDATE
+public.questionsubscription             = SELECT, INSERT, UPDATE, DELETE
 public.translationgroup                 = SELECT, INSERT, UPDATE
 public.translator                       = SELECT, INSERT, UPDATE, DELETE
 public.translationimportqueueentry      = SELECT, INSERT, UPDATE, DELETE
@@ -563,7 +563,7 @@ public.requestedcds                     = SELECT
 public.validpersonorteamcache           = SELECT
 
 [tickettracker]
-# User running expire-tickets.py
+# User running expire-questions.py
 type=user
 public.bug                              = SELECT
 public.distribution                     = SELECT
@@ -575,12 +575,12 @@ public.person                           = SELECT
 public.personlanguage                   = SELECT
 public.product                          = SELECT
 public.sourcepackagename                = SELECT
-public.supportcontact                   = SELECT
+public.answercontact                    = SELECT
 public.teammembership                   = SELECT
-public.ticket                           = SELECT, UPDATE
-public.ticketbug                        = SELECT
-public.ticketmessage                    = SELECT, INSERT
-public.ticketsubscription               = SELECT
+public.question                         = SELECT, UPDATE
+public.questionbug                      = SELECT
+public.questionmessage                  = SELECT, INSERT
+public.questionsubscription             = SELECT
 public.validpersonorteamcache           = SELECT
 
 [uploader]
@@ -762,7 +762,7 @@ public.bug                              = SELECT
 public.bugtask                          = SELECT
 public.message                          = SELECT
 public.messagechunk                     = SELECT
-public.ticket                           = SELECT
+public.question                         = SELECT
 
 # This group is now created automatically
 # Readonly access to everything
