--- a/configs/demo/launchpad.conf
+++ b/configs/demo/launchpad.conf
@@ -224,7 +224,7 @@ threads 16
         </buildsequencer_job>
     </buildsequencer>
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
     <supermirror>
         dbuser supermirror
