--- a/configs/jubany/launchpad.conf
+++ b/configs/jubany/launchpad.conf
@@ -184,7 +184,7 @@ interrupt-check-interval 200
         </buildsequencer_job>
     </buildsequencer>
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
     <rosetta>
         <rosettaadmin>
