--- a/configs/production1/launchpad.conf
+++ b/configs/production1/launchpad.conf
@@ -215,7 +215,7 @@ interrupt-check-interval 200
         </buildsequencer_job>
     </buildsequencer>
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
     <supermirror>
         dbuser supermirror
