--- a/configs/production3/launchpad.conf
+++ b/configs/production3/launchpad.conf
@@ -193,7 +193,7 @@ interrupt-check-interval 200
         </buildsequencer_job>
     </buildsequencer>
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
 </canonical>
 
