--- a/configs/staging/launchpad.conf
+++ b/configs/staging/launchpad.conf
@@ -290,7 +290,7 @@ interrupt-check-interval 200
     </statistician>
 
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
 
     <uploadqueue>
