--- a/configs/beta/launchpad.conf
+++ b/configs/beta/launchpad.conf
@@ -168,7 +168,7 @@ threads 16
     </statistician>
 
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
 
     <uploadqueue>
