--- a/configs/beta3/launchpad.conf
+++ b/configs/beta3/launchpad.conf
@@ -169,7 +169,7 @@ threads 4
     </statistician>
 
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
 
     <uploadqueue>
