--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -272,7 +272,7 @@ interrupt-check-interval 200
     </cveupdater>
 
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
         # The email domain, to which incoming mail should be sent.
         email_domain support.launchpad.net
     </answertracker>
@@ -615,7 +615,7 @@ interrupt-check-interval 200
     </cveupdater>
 
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
         email_domain support.launchpad.net
     </answertracker>
 
