--- a/configs/edge/launchpad.conf
+++ b/configs/edge/launchpad.conf
@@ -288,7 +288,7 @@ interrupt-check-interval 200
     </statistician>
 
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
 
     <uploadqueue>
