--- a/configs/ftpmaster/launchpad.conf
+++ b/configs/ftpmaster/launchpad.conf
@@ -280,7 +280,7 @@ interrupt-check-interval 200
     </statistician>
 
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
 
     <uploadqueue>
