--- a/configs/librarian/launchpad.conf
+++ b/configs/librarian/launchpad.conf
@@ -183,7 +183,7 @@ interrupt-check-interval 200
         </buildsequencer_job>
     </buildsequencer>
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
 </canonical>
 
