--- a/configs/production/launchpad.conf
+++ b/configs/production/launchpad.conf
@@ -283,7 +283,7 @@ interrupt-check-interval 200
         </gina_target>
     </gina>
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
     <supermirror>
         branchesdest /srv/sm-ng/mirrors
