--- a/configs/production2/launchpad.conf
+++ b/configs/production2/launchpad.conf
@@ -191,7 +191,7 @@ interrupt-check-interval 200
         </buildsequencer_job>
     </buildsequencer>
     <answertracker>
-        dbuser tickettracker
+        dbuser answertracker
     </answertracker>
 </canonical>
 
