--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -562,7 +562,7 @@ public.country                          = SELECT
 public.requestedcds                     = SELECT
 public.validpersonorteamcache           = SELECT
 
-[tickettracker]
+[answertracker]
 # User running expire-questions.py
 type=user
 public.bug                              = SELECT
