--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -56,6 +56,7 @@ public.binarypackagepublishinghistory   = SELECT
 public.bountysubscription               = SELECT, INSERT, UPDATE, DELETE
 public.bugattachment                    = SELECT, INSERT, UPDATE, DELETE
 public.bugbranch                        = SELECT, INSERT, UPDATE, DELETE
+public.bugbranchrevision                = SELECT, INSERT
 public.bugcve                           = SELECT, INSERT, DELETE
 public.bugnotification                  = SELECT, INSERT, UPDATE, DELETE
 public.bugnomination                    = SELECT, UPDATE
