--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -274,6 +274,7 @@ public.branchrevision                   = SELECT, INSERT, UPDATE, DELETE
 public.revisionnumber                   = SELECT, INSERT, UPDATE, DELETE
 public.revisionparent                   = SELECT, INSERT
 public.revisionauthor                   = SELECT, INSERT
+public.bugbranchrevision                = SELECT, INSERT
 
 [branchscanner]
 type=user
