--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -268,6 +268,7 @@ groups=write
 [importd]
 type=user
 groups=write
+public.bugbranch                        = SELECT, INSERT
 public.branch                           = SELECT, INSERT, UPDATE
 public.revision                         = SELECT, INSERT
 public.branchrevision                   = SELECT, INSERT, UPDATE, DELETE
