--- a/configs/beta/launchpad.conf
+++ b/configs/beta/launchpad.conf
@@ -80,7 +80,8 @@ threads 16
             </xmlrpc>
         </virtual_hosts>
 
-        db_statement_timeout 18000
+        db_statement_timeout 25000
+        soft_request_timeout 10000
 
         <launchpad_session>
             dbhost jubany.ubuntu.com
