--- a/configs/beta3/launchpad.conf
+++ b/configs/beta3/launchpad.conf
@@ -81,7 +81,8 @@ threads 4
             </xmlrpc>
         </virtual_hosts>
 
-        db_statement_timeout 18000
+        db_statement_timeout 25000
+        soft_request_timeout 10000
 
         <launchpad_session>
             dbhost jubany.ubuntu.com
