--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -273,6 +273,7 @@ public.branchrevision                   = SELECT, INSERT, UPDATE, DELETE
 public.revisionnumber                   = SELECT, INSERT, UPDATE, DELETE
 public.revisionparent                   = SELECT, INSERT
 public.revisionauthor                   = SELECT, INSERT
+public.revisionproperty                 = SELECT, INSERT
 
 [branchscanner]
 type=user
