Improve statistics and 1.0 page heading layout

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -172,6 +172,7 @@ public.productseries                    = SELECT
 public.sourcepackagename                = SELECT
 public.sourcepackagepublishinghistory   = SELECT
 public.sourcepackagerelease             = SELECT
+public.ticket                           = SELECT
 
 [librarian]
 type=user
