--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -83,6 +83,7 @@ public.mirrorproberecord                = SELECT, INSERT, DELETE
 public.nameblacklist                    = SELECT, INSERT, UPDATE, DELETE
 public.mirrordistroreleasesource        = SELECT, INSERT, UPDATE, DELETE
 public.officialbugtag                   = SELECT, INSERT, UPDATE, DELETE
+public.openidauthorization              = SELECT, INSERT, UPDATE
 public.packagebugcontact                = SELECT, INSERT, UPDATE, DELETE
 public.personlanguage                   = SELECT, INSERT, UPDATE, DELETE
 public.pofiletranslator                 = SELECT
