fixing the bzrsync tests

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -282,9 +282,11 @@ public.branch                           = SELECT, INSERT, UPDATE
 public.branchsubscription               = SELECT
 public.revision                         = SELECT, INSERT
 public.branchrevision                   = SELECT, INSERT, UPDATE, DELETE
-public.revisionnumber                   = SELECT, INSERT, UPDATE, DELETE
 public.revisionparent                   = SELECT, INSERT
 public.revisionauthor                   = SELECT, INSERT
+public.person                           = SELECT
+public.emailaddress                     = SELECT
+
 
 [targetnamecacheupdater]
 type=user
