--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -278,7 +278,7 @@ public.revisionauthor                   = SELECT, INSERT
 [branchscanner]
 type=user
 groups=write
-public.branch                           = SELECT, INSERT, UPDATE
+public.branch                           = SELECT, UPDATE
 public.branchsubscription               = SELECT
 public.revision                         = SELECT, INSERT
 public.branchrevision                   = SELECT, INSERT, UPDATE, DELETE
