First cut at building and starting Mailman from the runlaunchpad.py script, driven in large part by launchpad.conf settings.  This patch includes schema changes and temporary launchpad.conf changes.

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -229,7 +229,7 @@ interrupt-check-interval 200
             root /var/tmp/fatsam
             # If true, a Librarian server will be launched by the startup
             # script
-            launch yes
+            launch no
             # Should Librarian twistd be run with --spew for debugging
             spew no
         </librarian_server>
@@ -415,6 +415,51 @@ interrupt-check-interval 200
     <importd>
         dbuser importd
     </importd>
+
+    # Mailman configuration.  This is only a shim to the real Mailman
+    # configuration system and is primarily used to specify settings that
+    # differ from the defaults, or are needed during the build.
+    <mailman>
+	# Whether Mailman should be built.  Note that rebuilds are not
+	# supported; you'll have to clean things out manually if you want to
+	# rebuild Mailman with different locations or values.  Also, Mailman
+	# will only be rebuilt if the Mailman package can't be imported from
+	# the prefix path given below, regardless of the value of this
+	# variable.
+	build yes
+
+	# Whether Mailman should be started (i.e mailmanctl start).
+	launch yes
+
+	# The --prefix location for the configure script.  This can be a
+	# relative path to indicate a location relative to the runlaunchpad.py
+	# script's current working directory.
+	prefix lib/mailman
+
+	# The 'VAR_DIR' location.  This is where Mailman will put and look for
+	# variable run time data, such as the list pickles and queue
+	# directories.
+	var_dir /tmp/mailman
+
+	# The user:group names that the Mailman process will run under.  You
+	# may need to invoke this as root via sudo to have the necessary
+	# permissions during the build or run phase.  Leave this commented to
+	# use the current user and group.
+	#user_group mailman:mailman
+
+	# Uncomment this if you want a site list other than the default
+	# "mailman" mailing list.
+	#site_list mailman
+
+	# Uncomment this to specify the site list's owner address and
+	# password.
+	site_list_owner you@example.com:password
+
+	# Uncomment this if you want a host_name other than the current
+	# machine's hostname(1).  This is only used for the email domain
+	# part.
+	host_name mission.wooz.org
+    </mailman>
 
 </canonical>
 
