added a <mailman> section for testrunner

--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -744,4 +744,52 @@ interrupt-check-interval 200
         dbuser importd
     </importd>
 
+    # Mailman configuration.  This is only a shim to the real Mailman
+    # configuration system and is primarily used to specify settings that
+    # differ from the defaults, or are needed during the build.
+    <mailman>
+	<mailman-build>
+	    # If you change anything in this section, you must manually clean
+	    # and rebuild Mailman.  This will not happen automatically, and
+	    # Mailman will not build at all if the Mailman package can be
+	    # imported.
+
+	    # Whether Mailman should be built if it is not already.
+	    build yes
+
+	    # The --prefix location for the configure script.  This can be a
+	    # relative path to indicate a location relative to the
+	    # runlaunchpad.py script's current working directory.
+	    prefix lib/mailman
+
+	    # The 'VAR_DIR' location.  This is where Mailman will put and look
+	    # for variable run time data, such as the list pickles and queue
+	    # directories.
+	    var_dir /var/tmp/mailman
+
+	    # The user:group names that the Mailman process will run under.
+	    # You may need to invoke this as root via sudo to have the
+	    # necessary permissions during the build or run phase.  Leave this
+	    # commented to use the current user and group.
+	    #user_group mailman:mailman
+
+	    # Uncomment this if you want a site list other than the default
+	    # "mailman" mailing list.
+	    #site_list mailman
+
+	    # Uncomment this to specify the site list's owner address and
+	    # password.
+	    site_list_owner you@example.com:password
+
+	    # Uncomment this if you want a host_name other than the current
+	    # machine's hostname(1).  This is only used for the email domain
+	    # part.
+	    host_name mission.wooz.org
+	</mailman-build>
+
+	# Whether Mailman should be started (i.e mailmanctl start).
+	launch yes
+
+    </mailman>
+
 </canonical>
