--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -437,7 +437,7 @@ interrupt-check-interval 200
 	    # The 'VAR_DIR' location.  This is where Mailman will put and look
 	    # for variable run time data, such as the list pickles and queue
 	    # directories.
-	    var_dir /tmp/mailman
+	    var_dir /tmp/var/mailman
 
 	    # The user:group names that the Mailman process will run under.
 	    # You may need to invoke this as root via sudo to have the
@@ -450,8 +450,9 @@ interrupt-check-interval 200
 	    #site_list mailman
 
 	    # Uncomment this to specify the site list's owner address and
-	    # password.
-	    site_list_owner you@example.com:password
+	    # password.  Otherwise, a fake email address and random password
+	    # will be used.
+	    #site_list_owner you@example.com:password
 
 	    # Uncomment this if you want a host_name other than the current
 	    # machine's hostname(1).  This is only used for the email domain
@@ -778,8 +779,9 @@ interrupt-check-interval 200
 	    #site_list mailman
 
 	    # Uncomment this to specify the site list's owner address and
-	    # password.
-	    site_list_owner you@example.com:password
+	    # password.  Otherwise, a fake email address and random password
+	    # will be used.
+	    #site_list_owner you@example.com:password
 
 	    # Uncomment this if you want a host_name other than the current
 	    # machine's hostname(1).  This is only used for the email domain
