Staging session database is currently on carbon

--- a/configs/staging/launchpad.conf
+++ b/configs/staging/launchpad.conf
@@ -80,6 +80,7 @@ interrupt-check-interval 200
         <launchpad_session>
             dbuser session
             dbname session_staging
+            dbhost carbon.ubuntu.com
             cookie staging
         </launchpad_session>
         <launchpad_errorreports>
