--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -463,6 +463,10 @@ interrupt-check-interval 200
 	# Whether Mailman should be started (i.e mailmanctl start).
 	launch yes
 
+	# Host and port for connecting to the outgoing smtp server.  Valid
+	# format is [host][:port] where the default is localhost:25
+	#smtp localhost:25
+
     </mailman>
 
 </canonical>
