--- a/configs/beta/launchpad.conf
+++ b/configs/beta/launchpad.conf
@@ -39,6 +39,7 @@ threads 16
 
     <launchpad>
         restrict_to_team launchpad-beta-testers
+        site_message This is a private beta. Please do not post screenshots publicly. <a href="https://bugs.beta.launchpad.net/launchpad">Bug reports</a> and feedback welcome.
         dbuser launchpad
         errors_address launchpad-error-reports@lists.canonical.com
         # Bugs domain matches production, as production email gateway
