--- a/configs/beta4/launchpad.conf
+++ b/configs/beta4/launchpad.conf
@@ -39,6 +39,7 @@ threads 4
 
     <launchpad>
         restrict_to_team launchpad-beta-testers
+        site_message This is a private beta. Please do not post screenshots publicly. <a href="https://bugs.beta.launchpad.net/launchpad">Bug reports</a> and feedback welcome.
         # CREATE ROLE beta4 LOGIN IN ROLE launchpad
         dbuser beta4
         errors_address launchpad-error-reports@lists.canonical.com
