--- a/configs/default/launchpad.conf
+++ b/configs/default/launchpad.conf
@@ -1,5 +1,8 @@
-# identify the component configuration used to define the site:
+# Identify the component configuration used to define the site:
 site-definition site.zcml
+
+# Turn on Zope3 developer mode.
+devmode on
 
 # number of bytecode instructions to execute between checks for
 # interruptions (SIGINTR, thread switches):
