Update edge config

--- a/configs/edge/launchpad.conf
+++ b/configs/edge/launchpad.conf
@@ -38,7 +38,7 @@ interrupt-check-interval 200
     bounce_address bounces@canonical.com
 
     <launchpad>
-        dbuser launchpad
+        dbuser edge
         errors_address launchpad-error-reports@lists.canonical.com
         bugs_domain bugs.launchpad.net
 
@@ -81,7 +81,7 @@ interrupt-check-interval 200
 
         db_statement_timeout 18000
         <launchpad_session>
-            dbuser session
+            dbuser session_edge
             dbname session_prod
             dbhost jubany.ubuntu.com
             cookie edge
