Got official patch number from stub.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -174,7 +174,7 @@ public.scriptactivity                   = SELECT, INSERT
 public.sourcepackagename                = SELECT
 public.sourcepackagepublishinghistory   = SELECT
 public.sourcepackagerelease             = SELECT
-public.ticket                           = SELECT
+public.question                         = SELECT
 
 [librarian]
 type=user
